--- a/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
+++ b/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
@@ -2,7 +2,7 @@
 @page "/manage-waterdata/{Id:int}"
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
-@using AquAnalyzerWebApp.Models
+@using AquAnalyzerAPI.Dtos
 @using Microsoft.AspNetCore.Components.Forms
 
 @inject IWaterService WaterService
@@ -10,7 +10,7 @@
 
 <div class="container-fluid">
     <h1 class="mb-4">@(IsEditMode ? "Edit" : "Add") Water Data</h1>
-    
+
 
     <div class="row">
         <div class="col-md-6">
