Refactor layout structure and improve styling in App.razor and MainLayout.razor

--- a/AquAnalyzerWebApp/Components/App.razor
+++ b/AquAnalyzerWebApp/Components/App.razor
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="AquAnalyzerWebApp.styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+</head>
 
+<body>
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
@@ -23,19 +23,15 @@
                 </AuthorizeRouteView>
             </Found>
             <NotFound>
-                <PageTitle>Not found</PageTitle>
                 <LayoutView Layout="@typeof(Layout.MainLayout)">
-                    <p role="alert">Sorry, there's nothing at this address.</p>
+                    <p>Sorry, there's nothing at this address.</p>
                 </LayoutView>
             </NotFound>
         </Router>
     </CascadingAuthenticationState>
-</head>
 
-<body>
-    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
-    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
