Update App.razor to enhance styling and improve routing; fix logging in WaterService

--- a/AquAnalyzerWebApp/Components/App.razor
+++ b/AquAnalyzerWebApp/Components/App.razor
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,11 +7,14 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="AquAnalyzerWebApp.styles.css" />
-    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
-    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <HeadOutlet />
 </head>
 
 <body>
+    <Routes /> @* Replace with proper router *@
+    
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
@@ -33,5 +35,4 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
-
 </html>
