--- a/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
+++ b/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
@@ -40,8 +40,8 @@
                         <AuthorizeView Roles="VisualDesigner">
                             <Authorized Context="designerContext">
                                 <li class="nav-item">
-                                    <NavLink class="nav-link" href="/reports">
-                                        <i class="fas fa-chart-bar mr-2"></i>Reports
+                                    <NavLink class="nav-link" href="/analytics">
+                                        <i class="fas fa-chart-bar mr-2"></i>Analytics
                                     </NavLink>
                                 </li>
                             </Authorized>
