Refactor App.razor and Program.cs to enhance authentication, improve routing, and streamline service registration

--- a/AquAnalyzerWebApp/Components/App.razor
+++ b/AquAnalyzerWebApp/Components/App.razor
@@ -1,5 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using AquAnalyzerWebApp.Components
+
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +13,10 @@
     <link rel="stylesheet" href="AquAnalyzerWebApp.styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
-    <HeadOutlet />
+    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
 </head>
 
 <body>
-    <Routes /> @* Replace with proper router *@
-    
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
@@ -31,8 +33,10 @@
             </NotFound>
         </Router>
     </CascadingAuthenticationState>
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
 
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
+
 </html>
