Refactor NavMenu.razor to update navigation links and enhance profile section visibility; recreate ProfileBar component for improved user interaction

--- a/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
+++ b/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @inject NavigationManager NavigationManager
+@using AquAnalyzerWebApp.Components.Layout
 
 <nav class="navbar navbar-expand-lg navbar-light bg-water-light shadow-sm">
     <div class="container-fluid">
@@ -40,18 +41,20 @@
                         <AuthorizeView Roles="VisualDesigner">
                             <Authorized Context="designerContext">
                                 <li class="nav-item">
-                                    <NavLink class="nav-link" href="/analytics">
-                                        <i class="fas fa-chart-bar mr-2"></i>Analytics
+                                    <NavLink class="nav-link" href="/reports">
+                                        <i class="fas fa-chart-bar mr-2"></i>Reports
                                     </NavLink>
                                 </li>
                             </Authorized>
                         </AuthorizeView>
                     </ul>
                 </Authorized>
+                <NotAuthorized>
+                    <div class="profile-section">
+                        <AquAnalyzerWebApp.Components.Layout.ProfileBar />
+                    </div>
+                </NotAuthorized>
             </AuthorizeView>
-            <div class="profile-section">
-                <AquAnalyzerWebApp.Components.Layout.ProfileBar />
-            </div>
         </div>
     </div>
 </nav>
