Enhance NavMenu and ProfileBar components with layout improvements and lifecycle management

--- a/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
+++ b/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
@@ -1,8 +1,10 @@
+@inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @inject NavigationManager NavigationManager
 @using AquAnalyzerWebApp.Components.Layout
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-water-light shadow-sm">
     <div class="container-fluid">
