--- a/AquAnalyzerWebApp/Components/Layout/ProfileBar.razor
+++ b/AquAnalyzerWebApp/Components/Layout/ProfileBar.razor
@@ -1,4 +1,6 @@
 @inject NavigationManager NavigationManager
+@implements IDisposable
+
 @inject IAuthService AuthService
 @rendermode InteractiveServer
 @using System.Security.Claims
