--- a/AquAnalyzerWebApp/Components/App.razor
+++ b/AquAnalyzerWebApp/Components/App.razor
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <CascadingAuthenticationState>
+        <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
